plugins {
	id 'java'
}

group = 'com.edu.jdk'
version = '0.0.1-SNAPSHOT'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}


java {
	sourceCompatibility JavaVersion.VERSION_21
	targetCompatibility JavaVersion.VERSION_21
}


repositories {
	mavenCentral()

}

dependencies {
	testImplementation(platform("org.junit:junit-bom:5.9.1"))
	testImplementation("org.junit.jupiter:junit-jupiter")
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.addAll([
		"--enable-preview",
	])
}

tasks.withType(JavaExec).configureEach {
	jvmArgs(
		"--enable-preview",
		"--enable-native-access=ALL-UNNAMED"
	)
}


tasks.named('test') {
	useJUnitPlatform()
}
